style2.css
/*------------*/
/*body*/
/*header 60*/
/*controls 130*/
/*edit-section 212*/
/*responsive 293*/
/*Canvas 444*/
/*truth-table 457*/
/*Dark-mode 498*/
/*Main-menu 533*/
/*Edit-open 619*/
/*------------*/

@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&display=swap');

html {
    overflow-y: scroll;
}

*{
    margin: 0;
    padding: 0;
    width: 100%;
}

.no-controls .controls, .closed {
    display: none;
}

.no-controls .sample {
    width: 100%;
    margin-left: 0;
}

.no-controls .sample-content {
    width: 100%;
    height: min(85vh,100vw);
    margin-left: auto;
    margin-right: auto;
}

canvas {
    padding-left: 0;
    padding-right: 0;
    margin-left: auto;
    margin-right: auto;
    display: block;
}

body.dark {
    background: #221D1D;
    color: #ffffff;
}

body.light {
    background: #ffffff;
    color: #000000;
}

.clickable{
    cursor: pointer;
}

/*--------Header----------*/
.overall-header{
    justify-content: center;
    display: flex;
}

.header-left {
    width: 25%;
    text-align: center;
    margin-top: auto;
    margin-bottom: auto;
}

.header-center {
    width: 50%;
    text-align: center;
}

.header-right {
    width: 25%;
    text-align: center;
    margin-top: auto;
    margin-bottom: auto;
}

.header-button {
    font-size: 30px;
    padding: 10px;
    color: #FFFFFF;
    background: linear-gradient(180deg, #832AF4 0%, rgba(80, 84, 186, 0.99) 100%);
    border-radius: 100%;
    width: 30px;
    height: 30px;
    justify-content: center;
}

.instructions{
    width: auto;
    padding: 10px;
    color: #FFFFFF;
    justify-content: center;
    text-align: center;
    position: relative;
    left: 30px;
    font-size: 25px;
    font-family: 'Josefin Sans', sans-serif;
    background: #4C26B8;
}

#dark-mode{
    margin-left: 50px;
    margin-top: 10px;
    font-size: 30px;
    color: #4C26B8;
}

.logo{
    font-family: 'Josefin Sans', sans-serif;
    font-size: 20px;
}

/*--------Header-end----------*/
.main{
    display: flex;
    
}

/*-------Controls--------*/
.controls{
    margin-top: 100px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.rowBtn-1{
    display: flex;
    justify-content: center;
    text-align: center;
}

.rowBtn{
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: center;
}

.row-content{
    display: flex;
    justify-content:center;
    text-align: center;
    margin-bottom: 20px;
    font-size: 20px;
    font-weight: bold;
    font-family: 'Josefin Sans', sans-serif;
}

#row-number{
    margin-left: 10px;
    padding: 10px;
    box-shadow: rgba(9, 30, 66, 0.25) 0px 1px 1px, rgba(9, 30, 66, 0.13) 0px 0px 1px 1px;
}

#col-number{
    margin-left: 10px;
    padding: 10px;
    box-shadow: rgba(9, 30, 66, 0.25) 0px 1px 1px, rgba(9, 30, 66, 0.13) 0px 0px 1px 1px;
}

.icon-back{
    font-size: 18px;
    padding: 10px;
    color: #FFFFFF;
    background:#221D1D;
    width: 20px;
    height: 20px;
    justify-content: center;
    text-align: center;
    border-radius: 10%;
}

.rowBtn-2{
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: center;
    margin-top: 10px;
}

.colorChange{
    display: flex;
    justify-content: center;
    text-align: center;
    margin-top: 30px;
    width: 200px;
    order: 1;
}

.fa-circle{
    font-size: 30px;
    margin: 10px;
}

/*-------Controls-END--------*/

/*-----Edit-section-------*/

.edit-btn{
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    width: 50%;
    position: relative;
    margin-top: 10px;
    order: 2;
}

.edit-back{
    font-size: 30px;
    height: 35px;
    width: 35px;
    border:solid 2px;
    padding: 10px;
    border-radius: 100%;
}

.edit-back.small {
    height: 2.6vh;
    width: 2.6vh;
    font-size: 2.6vh;
    padding: 1.3vh;
}

.edit-btn-content h5{
    font-size: 2vh;
    font-weight: bold;
    margin-top: 1vh;
    margin-bottom: 2vh;
}
/*-----Edit-section-end-------*/

.evaluate-btn{
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    font-size: 20px;
    font-weight: bold;
    font-family: 'Josefin Sans', sans-serif;
    width: 300px;
    height: 50px;
    background-color: #221D1D;
    color: #FFFFFF;
    margin-top: 30px;
    order: 5;
}

.icon-back:active{
    background:#4C26B8;
}

.fa-circle:active{
    opacity: .7;
}

.evaluate-btn:active{
    background-color: #4C26B8;
}

@media (hover: hover) {
    .icon-back:hover{
        background:#4C26B8;
        transition: .5s;
    }

    .fa-circle:hover{
        opacity: .7;
        transition: .5;
    }

    .evaluate-btn:hover{
        background-color: #4C26B8;
        transition: .5s;
    }
}

/*-------responsive--------*/
@media screen and (orientation: landscape){
    .overall-header {
        top: 2vh;
        height: 13vh;
        position: absolute;
    }

    .edit-btn-content.small {
        display: none;
    }

    /*-------------Canvas---------------*/
    .sample{
        margin-top: 15vh;
        margin-left: 15vh;
    }

    .sample-content{
        width: min(80vh, 80vw);
        height: min(80vh, 80vw);
    }
    /*-------------Canvas-END---------------*/

    .evaluate-btn{
        margin-left: auto;
        margin-right: auto;
        order: 5;
    }

    .offscreen {
        display: flex;
        flex-direction: column;
        order: 2;
    }

    .truth-table-section {
        order: 6;
    }

    #results {
        order: 7;
    };
}

@media screen and (orientation: portrait){

    .overall-header{
        position: relative;
        top: 0;
        padding-top: 2vh;
        padding-bottom: 2vh;
    }

    .header-button {
        font-size: 4vh;
        width: 4vh;
        height: 4vh;
    }

    #menu-bar{
        left: 90%;
    }

    .logo{
        font-size: 4vh;
    }

    .controls{
        margin-top: 2vh;
    }
    .main{
        flex-direction: column;
    }

    .sample{
        width: 100%;
        margin-left: 0;
        margin-right: 0;
    }

    .sample-content{
        width:100%;
        height: min(62vh, 100vw);
        margin-left: 0;
        margin-top: 0;
    }

    .row-content{
        font-size: 2.5vh;
        margin-bottom: 1vh;
    }
    
    .offscreen {
        position: absolute;
        top: 100vh;
    }

    .icon-back{
        padding: 20px;
        color: #FFFFFF;
        background:#221D1D;
        align-items: center;
        margin: 10px;
        margin-top: 0;
    }

    .rowBtn-2{
        display: flex;
        flex-direction: column;
        justify-content: center;
        text-align: center;
        margin-top: 10px;
    }

    .colorChange{
        display: flex;
        justify-content: center;
        text-align: center;
        margin-top: 0;
        width: 90%;
        order: 0;
    }

    .fa-circle{
        font-size: 4vh;
        margin: 2vh;
        margin-bottom: 3vh;
    }

    .edit-back{
        font-size: 5.3vh;
        height: 5.3vh;
        width: 5.3vh;
        border: solid 2px;
        padding: 2.6vh;
        border-radius: 100%;
    }

    .edit-btn {
        margin-top: 0;
        width: 100%;
        order: 0;
    }

    .edit-btn-content h5{
        display: none;
    }

    .edit-btn-content.small {
        display: inline-block;
        width: 50%;
    }

    .evaluate-btn{
        font-size: 40px;
        width: 100%;
        height: 80px;
        margin-top: 20px;
        order: 0;
    }
}

 /*-------------Canvas---------------*/
 .sample{
    width: 50%;
    margin-top: 15vh;
    margin-left: 15vh;
}

.sample-content{
    width: 80vh;
    height: 80vh;
}
/*-------------Canvas-END---------------*/

/*--------------truth-table-----------------*/
#truth-table-container {
    text-align: center;
    margin-top: 6vh;
    margin-bottom: 12vh;
    width: 50%;
    padding-left: 25%;
    padding-right: 25%;
    overflow-y: auto;
    font-size: 2.2vh;
    z-index: 1;
}

#truth-table-container table {
    border: 1px solid;
    margin: 0;
    padding: 0;
    border-collapse: collapse;
    width: 100%;
}

#truth-table-container table .header {
    border: 1px solid;
    padding: 5px;
}

#truth-table-container table td {
    border: 1px dotted;
    width: 20%;
}

#truth-table-container table td.output {
    border-left: 3px double;
    border-right: 3px double;
    font-weight: bold;
}

/*--------------truth-table-end-----------------*/


/*-------Dark-mode-----*/
.edit-back, .dark{
	color: #221D1D;
	background:#FFFFFF;
}

.evaluate-btn, .dark{
	color: #FFFFFF;
	background:#4C26B8;
}

.icon-back, .dark{
	color: #FFFFFF;
	background:rgba(109,110,106,.7);
}

.icon-back, .dark:hover{
	background:#4C26B8;
	transition: .5s;
}

/*--------------------*/

/*---------Main-Menu------------*/


li{
	list-style: none;
}

.menu{
	display: none;
	height: 100vh;
	width: 100%;
	z-index: 9999;
	background-color: rgba(76,38,184,97%);
	position: fixed;
	font-family: 'Josefin Sans', sans-serif;
}

.fa-times{
    position: fixed;
	left: 40px;
	font-size: 35px;
	color: #FFFFFF;margin-top: 20px;
}


.menu-content{
	display: flex;
	flex-direction: column;
	justify-content: center;
	text-align: center;
	margin: auto;
	top: 20%;
	position: relative;
	align-items: center;
	width: 400px;
	

}

.menu-content li{
	margin: 20px;
	color: #FFFFFF;
	font-size: 30px;
	font-weight: 500;
	text-transform: uppercase;

}

.menu-btn-content{
	display: flex;
	flex-direction: column;
	width: 300px;
	color: #FFFFFF;
	text-align: center;
}

.teacher-btn{
	background-color: rgba(0,0,0,.9);
	padding: 10px;
	margin-top: 20px;

}

.toss-btn{
	
	padding: 10px;
	margin-top: 20px;
	border:solid 2px #FFFFFF;
	color: #FFFFFF;
}


.menu-text{
	font-size: 18px;
	
}

.menu-text span{
	font-family: 'Josefin Sans', sans-serif;
	font-weight: bold;

}


/*-------------------------------*/

/*-----------Edit-open-------------*/
.edit-open{
	width: 50%;
	height: 100vh;
	background-color: rgba(76,38,184,98%);
	position: fixed;
	top: 0;
	right: 0;
	display: none;
}

#edit-close{
	color: #FFFFFF;
	font-size: 30px;
	position: relative;
	top: 20px;
	left:40px;
}

.terminal{
	display: flex;
	flex-direction: column;
	justify-content: center;
	text-align: center;
	align-items: center;
	margin-top: 30%;
	font-family: 'Josefin Sans', sans-serif;

}

.terminal h3{
	font-size: 25px;
	color: #FFFFFF;
	text-transform: uppercase;
}

.terminal-select{
	display: flex;
	max-width: 500px;
	margin-top: 30px;
	background-color: rgba(255,255,255,.8);
	padding: 10px;
	border-radius: 10px;

}

.terminal-select p{
	font-size: 18px;
	color: #221D1D;
	box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
	margin: 10px;
	padding: 10px;
	border-radius: 10px;
}

.terminal-select p:hover{
	background-color: rgba(76,38,184,.9);
	color: #FFFFFF;
	transition: .5s;

}

.terminal-select2{
	margin-top: 30px;
	display: flex;
	max-width: 300px;
}

.terminalBtn{
	font-size: 25px;
	margin: 10px;
	padding: 20px;
	width: 20px;
	height: 20px;
	border-radius: 10px;
	color: #221D1D;
	box-shadow: rgba(0, 0, 0, 0.08) 0px 4px 12px;
	background-color: rgba(255,255,255,.8);
}

.select-content{
	flex-direction: column;
}

.small
{
	font-size: 12px;
	color: #FFFFFF;
	margin-top: 0;

}




/*---------------------------Edit-open-end*/

